# smol

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.md
cmake/: SmolConfig.cmake.in
examples/: CMakeLists.txt  basic.c  basic_3d.c  bunny_mark.c  canvas.c  mesh.c  music.c  shader.c  shapes.c  snake.c  sound.c  sprite.c  stencil.c  text.c  text_sdf.c  texture.c
examples/resources/: cube.h  light.glsl  raymarch.glsl  text_sdf.glsl
include/: smol.h
src/: sl_audio.c  sl_canvas.c  sl_codepoint.c  sl_core.c  sl_font.c  sl_image.c  sl_math.c  sl_mesh.c  sl_music.c  sl_rand.c  sl_render.c  sl_sample.c  sl_shader.c  sl_sound.c  sl_stream.c  sl_text.c  sl_texture.c
src/internal/: sl__array.h  sl__audio.c  sl__audio.h  sl__core.c  sl__core.h  sl__registry.h  sl__render.c  sl__render.h  sl__simd.h
