set(RESOURCES_PATH "${SL_ROOT_PATH}/examples/resources/")
set(INCLUDE_PATH "${SL_ROOT_PATH}/include")

function(add_example example_name source_file)
    add_executable(${example_name} ${source_file})
    target_link_libraries(${example_name} PRIVATE smol)
    target_compile_definitions(${example_name} PRIVATE RESOURCES_PATH="${RESOURCES_PATH}")
    target_include_directories(${example_name} PRIVATE "include")
    if(SL_HAVE_LIB_M)
        target_link_libraries(${example_name} PUBLIC m)
    endif()
endfunction()

add_example("sl-text" "${SL_ROOT_PATH}/examples/text.c")
add_example("sl-mesh" "${SL_ROOT_PATH}/examples/mesh.c")
add_example("sl-basic" "${SL_ROOT_PATH}/examples/basic.c")
add_example("sl-snake" "${SL_ROOT_PATH}/examples/snake.c")
add_example("sl-sound" "${SL_ROOT_PATH}/examples/sound.c")
add_example("sl-music" "${SL_ROOT_PATH}/examples/music.c")
add_example("sl-sprite" "${SL_ROOT_PATH}/examples/sprite.c")
add_example("sl-shapes" "${SL_ROOT_PATH}/examples/shapes.c")
add_example("sl-shader" "${SL_ROOT_PATH}/examples/shader.c")
add_example("sl-canvas" "${SL_ROOT_PATH}/examples/canvas.c")
add_example("sl-stencil" "${SL_ROOT_PATH}/examples/stencil.c")
add_example("sl-texture" "${SL_ROOT_PATH}/examples/texture.c")
add_example("sl-text-sdf" "${SL_ROOT_PATH}/examples/text_sdf.c")
add_example("sl-basic-3d" "${SL_ROOT_PATH}/examples/basic_3d.c")
add_example("sl-bunny-mark" "${SL_ROOT_PATH}/examples/bunny_mark.c")
